added progres bar

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,6 +1,7 @@
 .card {
     border: 2px solid purple;
     width: 10%;
+    display: grid;
     margin: 20px;
     border-radius: 10px;
     background-color:skyblue;
